Reduziere Schriftgröße der Auto-Übersetzung

--- a/web/src/style.css
+++ b/web/src/style.css
@@ -2820,6 +2820,14 @@ th:nth-child(10) {
     color: #fff;
     margin-bottom: 2px;
 }
+.auto-trans {
+    font-size: 0.8rem;
+    color: #999;
+    margin-bottom: 2px;
+}
+.auto-trans:empty {
+    display: none;
+}
 .comment-box:empty {
     display: none;
 }
